2018-06-18  Mark Wielaard  <mark@klomp.org>

	* dwarf_aggregate_size.c (array_size): New depth argument. Use
	aggregate_size instead of dwarf_aggregate_size and pass depth.
	(aggregate_size): New depth argument. Check depth isn't bigger
	than MAX_DEPTH (256). Pass depth to recursive calls.
	(dwarf_aggregate_size): ass zero as depth to aggregate_size.

2018-06-18  Mark Wielaard  <mark@klomp.org>

	* dwarf_peel_type.c (dwarf_peel_type): Limit modifier chain to 64.

2018-06-18  Mark Wielaard  <mark@klomp.org>

	* dwarf_aggregate_size.c (aggregate_size): Check die is not NULL.

2018-06-17  Luiz Angelo Daros de Luca  <luizluca@gmail.com>

	* dwarf_getsrclines.c (read_srclines): Intialize filelist early.

2018-06-15  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (check_constant_offset): Clarify DW_FORM_data16
	isn't really a constant.
	(dwarf_getlocation): Don't handle DW_FORM_data16 as block.
	(dwarf_getlocation_addr): Likewise.
	(dwarf_getlocations): Likewise.

2018-06-12  Mark Wielaard  <mark@klomp.org>

	* memory-access.h (read_3ubyte_unaligned_inc): New define.

2018-06-12  Mark Wielaard  <mark@klomp.org>

	* libdw.h (__libdw_dieabbrev): Set die->abbrev to DWARF_END_ABBREV
	on failure.

2018-06-10  Mark Wielaard  <mark@klomp.org>

	* dwarf_attr_integrate.c (dwarf_attr_integrate): Stop after 16 DIE
	ref chains.
	* dwarf_hasattr_integrate.c (dwarf_hasattr_integrate): Likewise.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_getabbrev.c (dwarf_getabbrev): Check die and offset.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_get_units.c (dwarf_get_units): Handle existing error, no
	dwarf.

2018-06-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (store_implicit_value): Return error when
	seeing bad DWARF or when tsearch runs out of memory.
	(__libdw_intern_expression): Report error when store_implicit_value
	reported an error.

2018-06-08  Mark Wielaard  <mark@klomp.org>
